--- a/leasing-auth-util/gradle.properties
+++ b/leasing-auth-util/gradle.properties
@@ -2,3 +2,6 @@ currentVersion=0.0.1
 artifactory_user=admin
 artifactory_password=Test2020Test
 artifactory_contextUrl=http://127.0.0.1:8081/artifactory
+# Enable caching
+org.gradle.caching=true
+gradle.cache.push=false
