--- a/leasing-auth-util/settings.gradle
+++ b/leasing-auth-util/settings.gradle
@@ -1,1 +1,16 @@
 rootProject.name = 'leasing-auth-util'
+//Enable caching
+ext.isPush = getProperty('gradle.cache.push')
+buildCache {
+    local {
+        enabled = false
+    }
+    remote(HttpBuildCache) {
+        url = "${artifactory_contextUrl}/generic-cache-leasing/"
+        credentials {
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+        }
+        push = isPush
+    }
+}
