--- a/leasing-auth-core/build.gradle
+++ b/leasing-auth-core/build.gradle
@@ -33,7 +33,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210303.204002-1')
+//	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210304.015523-1')
+//	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-SNAPSHOT')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210304.192408-2')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-SNAPSHOT')
+	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-20210304.203654-2')
 }
 
 test {
