--- a/leasing-auth-core/build.gradle
+++ b/leasing-auth-core/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = '11'
 repositories {
 	jcenter()
 	maven {
-		url "${artifactory_contextUrl}/gradle-leasing-util-virtual"
+		url "${artifactory_contextUrl}/gradle-leasing-virtual"
 		credentials {
 			username = "${artifactory_user}"
 			password = "${artifactory_password}"
@@ -33,11 +33,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-//	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210304.015523-1')
-//	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-SNAPSHOT')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210304.015523-1')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-SNAPSHOT')
 	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.1-20210304.192408-2')
 	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-SNAPSHOT')
-	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-20210304.203654-2')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-20210304.203654-2')
+	//compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-20210304.235805-1')ç
+	compile(group: 'com.leasingauth.exception', name: 'leasing-auth-exception', version: '0.0.1-20210305.003933-1')
+	compile(group: 'com.leasingauth.util', name: 'leasing-auth-util', version: '0.0.2-20210305.003905-1')
 }
 
 test {
