--- a/leasing-auth-util/build.gradle
+++ b/leasing-auth-util/build.gradle
@@ -37,7 +37,7 @@ artifactory {
     contextUrl = "${artifactory_contextUrl}"
     publish {
         repository {
-            repoKey = 'gradle-leasing-util-local'
+            repoKey = 'gradle-leasing-local'
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
@@ -56,7 +56,7 @@ artifactory {
     }
     resolve {
         repository {
-            repoKey = 'gradle-leasing-util-virtual'
+            repoKey = 'gradle-leasing-virtual'
             username = "${artifactory_user}"
             password = "${artifactory_password}"
             maven = true
