--- a/leasing-auth-util/gradle.properties
+++ b/leasing-auth-util/gradle.properties
@@ -5,3 +5,5 @@ artifactory_contextUrl=http://127.0.0.1:8081/artifactory
 # Enable caching
 org.gradle.caching=true
 gradle.cache.push=false
+buildInfo.build.name=SNAPSHOT
+buildInfo.build.number=0.0.1
